# PSU_zappy_2019

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: tasks_server.yml
ai/: IA.py  main.py  serverLink.py  server_link.py  utils.py
graphic/Zappy/Assets/: Tree.prefab
graphic/Zappy/Assets/3D Assets/Floor/: Cube.prefab  Plane.prefab
graphic/Zappy/Assets/3D Assets/Food/: Apple.prefab
graphic/Zappy/Assets/3D Assets/Food/Materials/: Apple.mat
graphic/Zappy/Assets/3D Assets/Gems/: Deraumere.prefab  Linemate.prefab  Mendiane.prefab  Phiras.prefab  Sibur.prefab  Thystame.prefab
graphic/Zappy/Assets/3D Assets/Rocket/Prefabs/: Rocket.prefab
graphic/Zappy/Assets/3D Assets/ShockWave/Prefabs/: ShockWave.prefab
graphic/Zappy/Assets/Characters/: Astronaut.prefab
graphic/Zappy/Assets/Characters/Character/: CharacterController.controller
graphic/Zappy/Assets/Characters/Materials/: Red_Mat.mat
graphic/Zappy/Assets/Materials/: Rocky_09.mat  Rocky_09_Height.mat
graphic/Zappy/Assets/Meshs/: Cube.prefab  Sphere.prefab
graphic/Zappy/Assets/Musics/: MainMixer.mixer
graphic/Zappy/Assets/Scenes/: GameScene.unity  MainMenuScene.unity
graphic/Zappy/Assets/Scripts/: CameraMovement.cs  CharacterGeneration.cs  Client.cs  CrystalGeneration.cs  GameScene.cs  GetInfoCharacter.cs  GetInfoTile.cs  MainMenu.cs  MapGenerator.cs  Options.cs  PauseMenu.cs  ServerJoin.cs
graphic/Zappy/Assets/VFX/Prefabs/: Elevation8.prefab  Fire.prefab
graphic/Zappy/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
server/: .gitignore  CMakeLists.txt  Makefile
server/include/: lib.h  server.h
server/include/commands/: broadcast.h  commands.h
server/include/map/: setup_map.h
server/include/sockets/: accept_connections.h  control_socket.h  run_server.h  select.h
server/include/utils/: close_server.h  parameters.h  timer.h  write_list.h
server/src/: main.c
server/src/ai_interaction/: ai_commands_main.c  ai_interaction_main.c  broadcast.c  connect_nbr.c  eject.c  fork.c  forward.c  incantation.c  inventory.c  look.c  movement.c  search_left_broadcast.c  search_right_broadcast.c  set.c  take.c  work_actions.c
server/src/commands/: bct_command.c  eht_command.c  enw_command.c  every_commands.c  msz_command.c  pbc_command.c  pdi_command.c  pic_command.c  pie_command.c  pin_command.c  plv_command.c  pnw_command.c  ppo_command.c  remove_first_cmd_queue.c  seg_command.c  sgt_command.c  tna_command.c
server/src/setup_map/: create_map.c  free_map.c  generate_map.c  setup_map.c  spawn_player.c
server/src/sockets/: accept_connections.c  close_client.c  end_valid_client.c  generate_new_drone.c  gnl.c  read_socket.c  run_server.c  setup_socket.c  valid_client.c  write_socket.c
server/src/sockets/close_clients/: close_client.c  close_in_cli_ww_list.c  utils_close_cli_co.c  utils_close_client.c
server/src/sockets/select/: select.c
server/src/utils/: extract_command.c  my_str_to_word_array.c
server/src/utils/egg/: create_egg.c  egg_to_player.c  update_egg.c
server/src/utils/free/: free_eggs.c
server/src/utils/list_actions/: move_waiting_to_working_list.c  new_client_to_wait_list.c
server/src/utils/parameters/: c_flag.c  f_flag.c  get_parameters.c  n_flag.c  p_flag.c  x_flag.c  y_flag.c
server/src/utils/server/: close_server.c
server/src/utils/time/: time.c
server/src/utils/write_list/: write_list.c
tests/: CMakeLists.txt
tests/include/: tests.h
tests/overload_test/: server_link.py  test_overload.py
tests/python_client_launcher/: python_client_launcher
tests/src/: bct_command.cpp  broadcast.cpp  close_clients.cpp  close_server.cpp  command_1.cpp  command_2.cpp  create_egg.cpp  forward.cpp  get_parameters.cpp  main.cpp  move_waiting_to_working_list.cpp  msz_command.cpp  new_client_to_ww_list.cpp  pbc_command.cpp  read_socket.cpp  setup_map.cpp  setup_socket.cpp  str_to_word_array.cpp  time.cpp  valid_client.cpp  write_list.cpp  write_socket.cpp
